--- a/components/nertc_sdk/idf_component.yml
+++ b/components/nertc_sdk/idf_component.yml
@@ -3,7 +3,7 @@ dependencies:
   espressif/zlib: "^1.3.1"
   ## Required IDF version
   idf:
-    version: ">=5.4.0"
+    version: ">=5.4.0,<=5.4.2"
   # # Put list of dependencies here
   # # For components maintained by Espressif:
   # component: "~1.0.0"
